add first Kotlin scripts